	PR tree-optimization/53729 	PR tree-optimization/53636 	* tree-vect-slp.c (vect_slp_analyze_bb_1): Delay call to 	vect_verify_datarefs_alignment until after statements have 	been marked as relevant/irrelevant. 	* tree-vect-data-refs.c (vect_verify_datarefs_alignment): 	Skip irrelevant statements. 	(vect_enhance_data_refs_alignment): Use STMT_VINFO_RELEVANT_P 	instead of STMT_VINFO_RELEVANT. 	(vect_get_data_access_cost): Do not check for supportable 	alignment before calling vect_get_load_cost/vect_get_store_cost. 	* tree-vect-stmts.c (vect_get_store_cost): Do not abort when 	handling unsupported alignment. 	(vect_get_load_cost): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@188979 138bc75d-0d04-0410-961f-82ee72b054a4